...
        android:id="@+id/scrollView"
        android:layout_marginTop="20sp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/usernameTextEntry"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="Enter new Username"
                android:inputType="text"
                android:autofillHints="false" />
...
